.provarCaches/00D5f000005vwGkEAI/objects/rstk__planneditem__c.object
<CustomObject>
    <description>planneditem__c</description>
    <fields>
        <fullName>rstk__completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__errored__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Errored</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__errormessage__c</fullName>
        <label>Error Message</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__icitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Item Master</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Planned Items</relationshipLabel>
        <relationshipName>planneditems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icixrcount__c</fullName>
        <label>Icixr Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icixrdeletedcount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Icixrs Deleted</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icreqdeletedcount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Icreqs Deleted</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__inprocess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__mrplaunch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MRP</label>
        <referenceTo>rstk__mrplaunch__c</referenceTo>
        <relationshipLabel>Planned Items</relationshipLabel>
        <relationshipName>Planned_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__splitpart__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Split Part</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__wocstdeletedcount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Work Orders Deleted</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Planned Item</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__icitem__c</columns>
        <columns>rstk__icixrcount__c</columns>
        <columns>rstk__wocstdeletedcount__c</columns>
        <columns>rstk__icreqdeletedcount__c</columns>
        <columns>rstk__icixrdeletedcount__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>rstk__inprocess__c</columns>
        <columns>rstk__completed__c</columns>
        <columns>rstk__errored__c</columns>
        <columns>rstk__errormessage__c</columns>
        <columns>rstk__mrplaunch__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planned Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>